debezium/dbz#1543 Fix case for enumerated values
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>